--- a/index.html
+++ b/index.html
@@ -117,3 +117,8 @@
 </body>
 </html>
 
+<div class="game-box">
+  <h3>لعبة باكمان</h3>
+  <iframe src="pacman-canvas-master/index.html" width="100%" height="500" style="border:none;"></iframe>
+</div>
+
