--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -10,66 +9,79 @@
       font-family: 'Cairo', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #f8f9fa;
     }
 
     header {
       background-color: #009688;
       color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #00695c;
+      padding: 15px 20px;
       display: flex;
-      justify-content: center;
-      padding: 10px;
+      justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
     }
 
-    nav a {
-      color: white;
-      margin: 10px;
-      text-decoration: none;
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .login-btn {
+      background-color: white;
+      color: #009688;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      cursor: pointer;
       font-weight: bold;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .login-btn:hover {
+      background-color: #e0f2f1;
     }
 
     .game-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
       padding: 20px;
     }
 
     .game-box {
       background-color: white;
-      border: 1px solid #ccc;
       border-radius: 10px;
-      padding: 15px;
-      margin-bottom: 30px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 10px;
     }
 
-    .game-box iframe {
+    .game-box h3 {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    iframe {
       width: 100%;
-      height: 480px;
+      height: 300px;
       border: none;
-      border-radius: 8px;
     }
 
     footer {
-      background-color: #009688;
+      background-color: #333;
       color: white;
       text-align: center;
       padding: 15px;
+      margin-top: 30px;
     }
 
     @media (max-width: 600px) {
-      .game-box iframe {
-        height: 300px;
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .login-btn {
+        margin-top: 10px;
       }
     }
   </style>
@@ -77,35 +89,31 @@
 <body>
 
   <header>
-    <h1>🎮 عالم DILO للألعاب 🎀</h1>
-    <p>استمتع بأجمل الألعاب المسلية للبنات والأولاد!</p>
+    <h1>🎮 عالم DILO للألعاب</h1>
+    <button class="login-btn" onclick="alert('تسجيل الدخول غير متاح حالياً 😅')">تسجيل الدخول</button>
   </header>
 
-  <nav>
-    <a href="index.html">الرئيسية</a>
-    <a href="login.html">تسجيل الدخول</a>
-    <a href="about.html">من نحن</a>
-    <a href="contact.html">اتصل بنا</a>
-  </nav>
-
   <div class="game-container">
-    
-<div class="game-box">
-  <h3>لعبة مكياج: Vanessa True Make Up</h3>
-  <iframe src="https://play.famobi.com/tm-vanessa" width="100%" height="600" style="border:none;"></iframe>
-</div>
-
-    
     <div class="game-box">
-      <h3>لعبة باكمان</h3>
-      <iframe src="pacman-canvas-master/index.html"></iframe>
+      <h3>لعبة 1: Flappy Bird</h3>
+      <iframe src="https://www.retrogames.cc/embed/40697-flappy-bird.html"></iframe>
     </div>
 
+    <div class="game-box">
+      <h3>لعبة 2: سوبر ماريو</h3>
+      <iframe src="https://www.retrogames.cc/embed/39755-super-mario-world.html"></iframe>
+    </div>
+
+    <div class="game-box">
+      <h3>لعبة 3: باكمان</h3>
+      <iframe src="https://www.friv.com/z/games/pacman/game.html"></iframe>
+    </div>
   </div>
 
   <footer>
-    <p>&copy; 2025 عالم DILO | جميع الحقوق محفوظة</p>
+    &copy; 2025 عالم DILO للألعاب - جميع الحقوق محفوظة
   </footer>
 
 </body>
 </html>
+
