--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
     </div>
   </div>
 
+  <div class="game-box">
+  <h3>لعبة مكياج: Vanessa True Make Up</h3>
+  <iframe src="https://play.famobi.com/tm-vanessa" width="100%" height="450" style="border:none; max-width:100%;"></iframe>
+</div>
+
+
   <footer>
     &copy; 2025 عالم DILO للألعاب - جميع الحقوق محفوظة
   </footer>
